--- a/web/pages/style/commonStyle.css
+++ b/web/pages/style/commonStyle.css
@@ -11,34 +11,33 @@
 }
 
 .table2 {
-    width: 100%;
-    margin: 1px;
-    padding: 1px;
+    width: calc(100% - 10px);
+    margin: 5px;
     border-collapse: collapse; /* 合并边框 */
 }
 .table2 td, .table2 th {
     text-align: center;
     border: 1px solid #e0e0e0; /* 更浅的灰色边框 */
-    padding: 10px 10px; /* 内边距 */
+    padding: 7px 5px 5px 5px; /* 内边距 */
 }
 
 .table2 tr:nth-child(even) {
-    background-color: #f2f2f2; /* 浅灰色 */
+    background-color: #F9F9F9; /* 浅灰色 */
 }
 
 .table2 tr:nth-child(odd) {
-    background-color: #ffffff; /* 白色 */
+    background-color: #EDEFF1; /* 白色 */
 }
 
 
 /* 悬停时改变背景颜色 */
 .table2 tr:hover {
-    background-color: #e0e0e0; /* 更深的灰色 */
+    background-color: #E3F2FD; /* 更深的灰色 */
 }
 
 /* 选中时改变背景颜色 */
 .table2 .selected {
-    background-color: lightblue !important; /* 指定鼠标悬停时的背景色 */
+    background-color: #BBDEFB !important; /* 指定鼠标悬停时的背景色 */
 }
 
 
