--- a/web/pages/style/commonStyle.css
+++ b/web/pages/style/commonStyle.css
@@ -10,6 +10,10 @@
     padding: 20px; /* 内边距 */
 }
 
+.table1 input {
+    display: inline;
+}
+
 .table2 {
     width: calc(100% - 10px);
     margin: 5px;
